# vibronics

./: .gitignore  README.md  build.sh  rebuild.sh
steqr/: README.md  makefile
steqr/source/: main.f90  utility.f90
test/: Hd_1-2.txt  alpha.txt  beta.txt  final-freq-1.txt  mass.txt  seed-1-2.wfn  seed-2-2.wfn  seed-3-2.wfn  seed-4-2.wfn  shift-vector.txt  transformation-matrix.txt  v-1-2.wfn  v-2-2.wfn  v-3-2.wfn  v-4-2.wfn  vibration1.in  w-1-2.wfn  w-2-2.wfn  w-3-2.wfn  w-4-2.wfn
test/input/: Hd_1-1.in  Hd_1-2.in  Hd_2-2.in  initial-freq-2.in  vibration1.in  vibration2.in  wfn-2.in
test/plot2D/: Hd_1-1.in  Hd_1-2.in  Hd_2-2.in  IntCoordDef  Linv-1.txt  Linv-2.txt  SAS.in  a-smooth-1.txt  a-smooth-2.txt  a-state-1.txt  a-state-2.txt  alpha.txt  beta.txt  d-state-1.txt  d-state-2.txt  final-freq-1.in  final-freq-2.in  g.cart  h.cart  heatmap-1.py  heatmap-2.py  initial-freq-1.in  initial-freq-2.in  mex.xyz  population.txt  shift-vector.in  spectrum.txt  state-2.txt  surface-mex.xyz  transformation-matrix.in  vibration1.in  vibration2.in  wfn-1.in  wfn-2.in  xy.txt
test/soc/: detail-eigval.txt  detail-eigvec.txt  level-1.in  level-2.in  soc-level.txt  wfn-2.in
test/soc/irred-1/: Hd_1-1.in  Hd_1-2.in  Hd_2-2.in  alpha.txt  beta.txt  final-freq-1.in  final-freq-2.in  initial-freq-1.in  initial-freq-2.in  population.txt  shift-vector.in  spectrum.txt  transformation-matrix.in  vibration1.in  vibration2.in  wfn-1.in  wfn-2.in
test/soc/irred-2/: Hd_1-1.in  Hd_1-2.in  Hd_2-2.in  alpha.txt  beta.txt  final-freq-1.in  final-freq-2.in  initial-freq-1.in  initial-freq-2.in  population.txt  shift-vector.in  spectrum.txt  transformation-matrix.in  vibration1.in  vibration2.in  wfn-1.in  wfn-2.in
test/v0/: Hd_1-1.in  Hd_1-2.in  Hd_2-2.in  alpha.txt  beta.txt  initial-freq-1.in  spectrum.txt  vibration2.in  wfn-1.in
test/v1/: alpha.txt  beta.txt  final-freq-1.in  initial-freq-2.in  population.txt  spectrum.txt  vibration1.in
test/v2/: .eig.log.swp  final-freq-2.in  population.txt  shift-vector.in  spectrum.txt  transformation-matrix.in
test/v2/input/: Hd_1-1.in  final-freq-2.in  gen_vibration.py  initial-freq-1.in  wfn-1.in
tools/: build.sh  rebuild.sh
tools/eig/: CMakeLists.txt  README.md
tools/eig/source/: main.cpp  spectrum.cpp  steqr.f90  wfn.cpp
tools/plot2D/: CMakeLists.txt  README.md  main.cpp
tools/plot2D/include/: HdKernel.hpp  NCKernel.hpp
tools/plot2D/source/: HdKernel.cpp  NCKernel.cpp  main.cpp
tools/seed/: CMakeLists.txt  README.md  main.cpp
tools/soc/: CMakeLists.txt  README.md  main.cpp  perturbation.cpp
tools/vibration/: gen_double.py  gen_single.py
v0/: CMakeLists.txt  README.md  main.cpp
v1/: CMakeLists.txt  README.md  main.cpp
v2/: CMakeLists.txt  README.md  main.cpp
vibration/: gen_vibration.py  vibration2.in
